--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.2",
+    "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
     "@mui/styled-engine-sc": "^5.5.2",
+    "@types/node": "^18.7.16",
+    "@types/react": "18.0.1",
     "bootstrap": "^5.1.3",
     "flat-carousel": "^0.0.1",
     "next": "12.1.4",
@@ -24,7 +26,8 @@
     "react-dom": "18.0.0",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.50.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "typescript": "^4.8.3"
   },
   "devDependencies": {
     "eslint": "8.12.0",
